CMA-137 : cell_number is added in registration API
